--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="left-content">
                 <p>Send Airtime to<br> a Larger Audience with<br> a More Faster,Reliable<br>Airtime service
                 </p>
-                <button onclick="window.location.href='LOGIN/login.html'" type="submit" id="get-started">Get Started</button>
+                <button type="submit" id="get-started">Get Started</button>
             </div>
             <div class="right-content">
                 <img class="image" src="Img/Celebration.png">
