--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
      <p>
          <button id="login" type="submit">Login</button>
      </p>
-     <p>You do not have an account yet? create <a href="../SIGN UP FORM/signup.html" title="sign up here">Here</a></p>
+     <p>You do not have an account yet? create <a href="SIGN-UP-FORM/signup.html" title="sign up here">Here</a></p>
    </form> 
    </div>
 </div>
