updated commit on the dashboard

--- a/ADD-NEW/Add.html
+++ b/ADD-NEW/Add.html
@@ -69,8 +69,8 @@
 						</div>
 						<div class="div-3">
 							<div class="transaction-div">
+								<h3>Transaction</h3>
 								<div class="transaction-table">
-									<h3>Table</h3>
 									<table cellspacing="35px" style="width:100%" id="t01">
 										<thead>
 											 <th>S/N</th>
