--- a/ADD-NEW/Add.html
+++ b/ADD-NEW/Add.html
@@ -69,7 +69,10 @@
 						</div>
 						<div class="div-3">
 							<div class="transaction-div">
-								<h3>Transaction</h3>
+								<div class="transaction-button">
+									<h3>Transaction</h3>
+								  <button>View all</button>
+								</div>
 								<div class="transaction-table">
 									<table cellspacing="35px" style="width:100%" id="t01">
 										<thead>
