--- a/ADD-NEW/Add.html
+++ b/ADD-NEW/Add.html
@@ -25,10 +25,10 @@
 			<div class="fixed-sidebar ">
 				<h1>Disburse.</h1>
 				<div class="sidebar-content">
-					<p class="sidebar name " data-number="1"><i class="fas fa-user"></i>NAME</p>
-					<p class="sidebar dashboard active" data-number="2">Dashboard</p>
-					<p class="sidebar add-customer " data-number="3">Add Customer</p>
-					<p class="sidebar  wallet " data-number="4">Wallet</p>
+					<p class="sidebar name " data-number="1"><i class="fas fa-user side-icon"></i>NAME</p>
+					<p class="sidebar dashboard active" data-number="2"><i class="fas fa-chart-bar side-icon"></i>Dashboard</p>
+					<p class="sidebar add-customer " data-number="3"><i class="fas fa-plus side-icon"></i>Add Customer</p>
+					<p class="sidebar  wallet " data-number="4"><i class="fas fa-money-bill side-icon"></i>Wallet</p>
 					<!-- <p class="sidebar wallet">CONTACT US</p>  -->
 				</div> 
 			</div>
@@ -36,10 +36,10 @@
 			<div class="fixed-sidebar mobile-sidebar ">
 				<h1>Disburse.</h1>
 				<div class=" sidebar-content">
-					<p class="sidebar name  " data-number="1"><i class="fas fa-user"></i>NAME</p>
-					<p class="sidebar dashboard active" data-number="2">Dashboard</p>
-					<p class="sidebar  add-customer   "  data-number="3">Add Customer</p>
-					<p class="sidebar  wallet"  data-number="4">Wallet</p>
+					<p class="sidebar name  " data-number="1"><i class="fas fa-user  side-icon"></i>NAME</p>
+					<p class="sidebar dashboard active" data-number="2"><i class="fas fa-chart-bar side-icon"></i>Dashboard</p>
+					<p class="sidebar  add-customer   "  data-number="3"><i class="fas fa-money-bill-wave side-icon"></i>Add Customer</p>
+					<p class="sidebar  wallet"  data-number="4"><i class="fas fa-money-bill side-icon"></i>Wallet</p>
 					<!-- <p class="sidebar wallet">CONTACT US</p> -->
 				</div> 
 			</div>
@@ -64,8 +64,8 @@
               </div>
 						</div>
 						<div class="div-2">
-							<p><span class="heading">Bank:</span><span class="detail"> polaris bank</span></p>
-							<p><span class="heading">Phone Number:</span><span class="detail"> 08067883093</span></p>
+							<p><span class="heading">Bank:</span><span class="detail bank"> polaris bank</span></p>
+              <p><span class="heading">Phone Number</span><br><br><span class="detail" id="number"> 08067883093</span> <i class="far fa-copy"> copy</i></p>
 						</div>
 						<div class="div-3">
 							<div class="transaction-div">
