--- a/ADD-NEW/Add.html
+++ b/ADD-NEW/Add.html
@@ -38,7 +38,7 @@
 				<div class=" sidebar-content">
 					<p class="sidebar name  " data-number="1"><i class="fas fa-user  side-icon"></i>NAME</p>
 					<p class="sidebar dashboard active" data-number="2"><i class="fas fa-chart-bar side-icon"></i>Dashboard</p>
-					<p class="sidebar  add-customer   "  data-number="3"><i class="fas fa-money-bill-wave side-icon"></i>Add Customer</p>
+					<p class="sidebar  add-customer   "  data-number="3"><i class="fas fa-plus side-icon"></i>Add Customer</p>
 					<p class="sidebar  wallet"  data-number="4"><i class="fas fa-money-bill side-icon"></i>Wallet</p>
 					<!-- <p class="sidebar wallet">CONTACT US</p> -->
 				</div> 
