--- a/ADD-NEW/Add.html
+++ b/ADD-NEW/Add.html
@@ -65,7 +65,7 @@
 						</div>
 						<div class="div-2">
 							<p><span class="heading">Bank:</span><span class="detail bank"> polaris bank</span></p>
-              <p><span class="heading">Phone Number</span><br><br><span class="detail" id="number"> 08067883093</span> <i class="far fa-copy"> copy</i></p>
+			  <p><span class="heading">Phone Number</span><br><br><span class="detail" id="number"> 08067883093</span> <i  class="far fa-copy"> copy</i></p> 
 						</div>
 						<div class="div-3">
 							<div class="transaction-div">
@@ -133,6 +133,7 @@
 												Date
 										</td>
 									 </tr>
+									 
 									 </tbody>
 								</table> 
 								</div>	
@@ -232,8 +233,8 @@
                 </div>
               </div>	
               <div class="message-div">
-                <p class="message"> After creating a wallet, a phone number would be generated here. The generated phone number will be required  for  funding your wallet.
-                </p>
+                <p class="message"> After creating a wallet, a phone number would be generated here. The generated phone number will be required  for  funding your wallet.</p>
+                <p class="number"> phone-number: 08067883093 </p>
               </div>
 						</div>
 					</div>
