--- a/ADD-NEW/Add.html
+++ b/ADD-NEW/Add.html
@@ -23,7 +23,7 @@
 		</div>
 		<div class="content">
 			<div class="fixed-sidebar ">
-				<h1>Disburse.</h1>
+				<h1 class="disburse" onclick="window.location.href='../index.html'">Disburse.</h1>
 				<div class="sidebar-content">
 					<p class="sidebar name " data-number="1"><i class="fas fa-user side-icon"></i>NAME</p>
 					<p class="sidebar dashboard " data-number="2"><i class="fas fa-chart-bar side-icon"></i>Dashboard</p>
@@ -34,7 +34,7 @@
 			</div>
 
 			<div class="fixed-sidebar mobile-sidebar ">
-				<h1>Disburse.</h1>
+				<h1 class="disburse" onclick="window.location.href='../index.html'">Disburse.</h1>
 				<div class=" sidebar-content">
 					<p class="sidebar name  " data-number="1"><i class="fas fa-user  side-icon"></i>NAME</p>
 					<p class="sidebar dashboard" data-number="2"><i class="fas fa-chart-bar side-icon"></i>Dashboard</p>
@@ -52,19 +52,19 @@
             <div class="div-1 flex-div">
               <div class="account-Number balance-box">
                 <p class="heading">Account-Number</p>
-								<p class="amount">2388495663</p>
-								<p class="amount initial">_ _ _ _ _ _ _ _ _ _ _</p>
+								<!-- <p class="amount">2388495663</p> -->
+								<p class="amount initial">_ _ _ _ _ _ _ _ </p>
 								
               </div>
               <div class="balance-dashboard balance-box">
                 <p class="heading">Bank-balance</p>
-								<p class="amount">#2000</p>
-								<p class="amount initial">_ _ _ _ _ _ _ _ _ _ _</p>
+								<!-- <p class="amount">#2000</p> -->
+								<p class="amount initial">_ _ _ _ _ _ _ _ _ </p>
               </div>
               <div class="wallet-dashboard balance-box">
                 <p class="heading">Wallet balance</p>
-								<p class="amount">#600</p>
-								<p class="amount initial">_ _ _ _ _ _ _ _ _ _ _</p>
+								<!-- <p class="amount">#600</p> -->
+								<p class="amount initial">_ _ _ _ _ _ _ _ _ </p>
               </div>
 						</div>
 						<div class="div-2">
@@ -224,7 +224,7 @@
                   <div class= "wallet-balance">
                     <p class="heading">Wallet balance:</p>
                     <div class="details">
-                      <p class="balance">#700.00</p>
+                      <p class="balance">00.00</p>
                       <p class = "currency">NGN.</p>
                     </div>
                   </div>
@@ -239,11 +239,13 @@
                     <i class="fas fa-money-check-alt"></i>
 										<br><br>Your  bank balance will be displayed here <br>once you create a wallet
 									</p>
+									<p class="balance">#1588394.00</p>
+									<p class="currency">NGN</p>
                 </div>
               </div>	
               <div class="message-div">
                 <p class="message"> After creating a wallet, a phone number would be generated here. The generated phone number will be required  for  funding your wallet.</p>
-                <p class="phone-number"> Phone-number: <span id="number"> 08067883093 <i class="far fa-copy"> copy</i></span></p>
+                <p class="phone-number"> Phone-number: <span id="wallet-number"> 08067883093 </span><i class="far fa-copy"> copy</i></p>
               </div>
 						</div>
 					</div>
