--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<nav>
 				<div class="navigation">
 					<div class="left-nav">
-						<h1>Disburse.</h1>
+						<h1 class="disburse" onclick="window.location.href='index.html'">Disburse.</h1>
 					</div>
 					<div class="right-nav">
 						<ul>
