--- a/SIGN-UP-FORM/signup.html
+++ b/SIGN-UP-FORM/signup.html
@@ -12,7 +12,7 @@
         <nav>
             <div class="navigation">
                 <div class="left-nav">
-                   <h2>Disburse.</h2> 
+                   <h2 class="disburse" onclick="window.location.href='../index.html'">Disburse.</h2> 
                 </div>
                 <div class="right-nav">
                 </div>
@@ -43,12 +43,12 @@
         <div class="input-container">
           <input class="space" id="email"  type="email" name="email" placeholder="Your email..." required>
         </div>
-    </p>
+		</p>
      <p>
         <label>PASSWORD</label><br>
         <div class="input-container">
-        <input class="space" id="password-input"  type="password" name="password" placeholder="Your password... " required >
-        <i class="fa fa-eye" id="toggle-password"></i>
+        <input class="space password-input"   type="password" name="password" placeholder="Your password... " required>
+        <i class="fa fa-eye " id="toggle-password"></i>
     </div>
        <small style="font-family: Arial, Helvetica, sans-serif;">(Please enter a password between 6 and 12 characters)</small>
     </p>
@@ -56,12 +56,12 @@
     <p>
         <label> CONFIRM PASSWORD</label><br>
         <div class="input-container">
-        <input class="space" id="password-input"  type="password" name="password" placeholder="Confirm password..." required>
+        <input class="space password-input"  type="password" name="password" placeholder="Confirm password..." required>
         <i class="fa fa-eye" id="toggle-password"></i>
     </div>
         <small id="error-message" style="display: none">Both passwords must match</small>
     
-    </p>
+		</p>
 
    <p>By proceeding, do you agree with  our <a href="#">Terms and Conditions?</a></p>
     <p>
