--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 				</div>
 			</nav>
 			<div class="body">
-				<div class="login-status">
-					<p><i class="fas fa-check-circle"></i> Login Successful</p>
+				<div class="login-status  logout-status">
+					<!-- login/logout status content (as the case my be)-->
 				</div>
 				<div class=" div-one">
 					<div class="left-content">
